@@ -83,7 +83,6 @@ libpocc_la_SOURCES 	=			\
 libpocc_la_CPPFLAGS	= -DHAVE_LIBPOCC_UTILS -DPOCC_ROOT_DIR=$(abs_top_srcdir)
 
 libpocc_la_LIBADD	=						 \
-	$(top_builddir)/driver/pocc-utils/libpocc-utils.la		 \
 	$(top_builddir)/ir/install-scoplib/lib/libscoplib.la		 \
 	$(top_builddir)/analyzers/install-clan/lib/libclan.la		 \
 	$(top_builddir)/analyzers/install-candl/lib/libcandl.la		 \
@@ -94,3 +93,7 @@ libpocc_la_LIBADD	=						 \
 	$(top_builddir)/optimizers/install-pluto/lib/libpluto.la	 \
 	$(top_builddir)/generators/install-cloog/lib/libcloog-polylib.la \
 	$(top_builddir)/math/install-fm/lib/libfm.la
+
+## FIXME: Removed this due to a potential conflict on Solaris10. We 
+## already include pocc-utils in letsee and pluto.
+#	$(top_builddir)/driver/pocc-utils/libpocc-utils.la		 
