@@ -50,7 +50,6 @@ fi
 # Generate the unrolling annotation 
 
 # unroll only two
-
 unrolldim1=`sed -n -e '1p' .unroll | awk '{print $1}'`
 unrolldim2=`sed -n -e '2p' .unroll | awk '{print $1}'`
 
@@ -66,26 +65,29 @@ if [ $numloops -ne 1 ]; then
 
     # find the unrollable hotspot with $unrolldim1 and $unrolldim2
     params=""
-    for i in `sed -n 1~2p .params`; do params=$i\\\|$params; done
+    while read n; do
+	params=$n\\\|$params; 
+    done < .params;
+    #for i in `sed -n 1,2p .params`; do params=$i\\\|$params; done
     params=$params"phony"
 
     num=""
     # don't even bother to ask what this is - the lowest levels I have stooped to
     for i in `grep -n  "for ($unrolldim1=" $1 | grep -v $params | awk '{split($1,t,":"); print t[1]}'`  ; do grep -n ".*" $1 |  sed -n -e \
-        ''$(($i+1))'p'  | grep "for ($unrolldim2=" | grep -q -v "$params" ; if [ $? == "0" ]; then  num=$i; break; fi 
+        ''$(($i+1))'p'  | grep "for ($unrolldim2=" | grep -q -v "$params" ; if [ $? == "0" ]; then  num="$i"; break; fi 
     done
 
     # if no loops with bounds free of parameters are found, just go for those
     # with params in them
     if [ "$num" == "" ]; then
         for i in `grep -n  "for ($unrolldim1=" $1 | awk '{split($1,t,":"); print t[1]}'` ; do grep -n ".*" $1 |  sed -n -e \
-            ''$(($i+1))'p'  | grep "for ($unrolldim2=" | grep -q -v "$params" ; if [ $? == "0" ]; then  num=$i; break; fi 
+            ''$(($i+1))'p'  | grep "for ($unrolldim2=" | grep -q -v "$params" ; if [ $? == "0" ]; then  num="$i"; break; fi 
         done
 
         # selling my soul to the devil now
         if [ "$num" == "" ]; then
             for i in `grep -n  "for ($unrolldim1=" $1 | awk '{split($1,t,":"); print t[1]}'` ; do grep -n ".*" $1 |  sed -n -e \
-                ''$(($i+1))'p'  | grep -q "for ($unrolldim2=" ; if [ $? == "0" ]; then  num=$i; break; fi 
+                ''$(($i+1))'p'  | grep -q "for ($unrolldim2=" ; if [ $? == "0" ]; then  num="$i"; break; fi 
             done
         fi
     fi
@@ -94,9 +96,9 @@ if [ $numloops -ne 1 ]; then
         exit 4
     fi
 
-    echo "[PLann] Found unrollable nest at $num of $1"
-    #echo "[PLann] Found unrollable nest"
-    match_closing_brace $1 $num
+    #echo "[PLann] Found unrollable nest at $num of $1"
+    echo "[PLann] Found unrollable nest"
+    match_closing_brace "$1" "$num"
     annotation_end_line_num=$?
 
     sed -n -e '1,'$(($num-1))'p' $1 > .header
@@ -146,7 +148,7 @@ else
         exit 4
     fi
 
-    echo "[PLann] Found unrollable nest at line # $num" of $1
+    echo "[PLann] Found unrollable nest at line $num of $1"
     match_closing_brace $1 $num
     annotation_end_line_num=$?
 
