@@ -1,3 +1,9 @@
+2009-07-20  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
+
+	* driver/src/Makefile.am: Remove linking to pocc-utils. Tentative
+	fix for a bug occuring with Solaris 10 about identical symbol
+	being imported.
+
 2009-07-18  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
 	This patch creates a small test-suite for PoCC, and all the
 	associated mechanism.
